Version: 2.1.0
Date: ????
  Features:
    - Setting "Use Angel's material colors for intermediates" now includes support for player armor
    - Added setting "Use Vanilla-style chemical plants", (default off) to use vanilla chemical plant sprites and animations when Angel's setting "Disable Bob's chemical plants" is enabled
    - Additions of EmmyLua-style documentation is ongoing
  Changes:
    - Reskinning of the standard Factorio pipe has been moved into Artisanal Reskins: Library to support adjustments to pipe sprites and shadows in the entire suite
    - Internal restructuring to make entity reskinning through functions globally available under `reskins.lib.apply_skin` is ongoing
    - Iron rod recipes now use the base Factorio iron rod sprites
  Bugfixes:
    - Fixed that the iron plate to iron rod recipe referred to a deprecated `angels-rod-iron` icon instead of the current `iron-stick` icon
    - Fixed that Angel's Industry component mode was not properly detected and recipe icons were broken in some instances
    - Fixed that the iron rod was not properly reverted to the base Factorio sprite
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-12-12
  Changes:
    - Unified filtering furnaces to use the same set of sprites, and updated settings referring to metal mixing furnances to refer to filtering furnaces
  Bugfixes:
    - Fixed that several ore refining icons were improperly reskinned when materials added by Bob's Metal's, Chemicals and Intermediates or alternatively Angel's Industries were not present
    - Fixed that the liquefier animation was not playing
    - Fixed startup error when playing with Omni Compression related to the ore flotation cell recipes
    - Fixed that lead and tin plate recipe icons for direct smelting were not reskinned when Angel's Smelting was not enabled
  Locale: